# titanic-with-rust

./: Cargo.toml  structure.txt
python_integration/: main.py
python_integration/rust_module/: Cargo.toml
python_integration/rust_module/src/: lib.rs
src/: algorithm.rs  lib.rs  preprocessing.rs
