[package]
name = "rust_eda"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = "0.26.1"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
polars-lazy = "0.26"  # Asegúrate de incluir la versión correspondiente

[workspace]
members = [
    ".",
    "python_integration/rust_module",
]